Try to fix drawer on mobile

--- a/web/src/components/SettingsDrawer/SettingsDrawer.module.scss
+++ b/web/src/components/SettingsDrawer/SettingsDrawer.module.scss
@@ -1,44 +1,49 @@
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes slideIn {
+	from {
+		transform: translateX(100%);
+	}
+	to {
+		transform: translateX(0);
+	}
+}
+
 .backdrop {
 	position: absolute;
 	background-color: rgba(0, 0, 0, 0.25);
 	overflow: hidden;
-	right: 0;
+	inset: 0;
+	animation: fadeIn 200ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.drawer {
+	width: 20rem;
+	padding: 1rem;
+	position: absolute;
 	top: 0;
-	width: 0;
 	height: 100vh;
-	z-index: 999;
+	right: 0;
+	background-color: var(--elevated-background);
 
-	.drawer {
-		width: 20rem;
-		padding: 1rem;
-		position: absolute;
-		top: 0;
-		height: 100vh;
-		right: 0;
-		background-color: var(--elevated-background);
-		transform: translateX(100%);
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	animation: slideIn 200ms cubic-bezier(0.165, 0.84, 0.44, 1);
 
-		display: flex;
-		flex-direction: column;
-		gap: 2rem;
-
-		transition: transform 200ms cubic-bezier(0.165, 0.84, 0.44, 1);
-
-		.closeBtn {
-			color: var(--primary-text-color);
-			width: 2.5rem;
-			height: 2.5rem;
-			padding: 0;
-			margin-left: auto;
-		}
-	}
-
-	&.open {
-		width: 100vw;
-
-		.drawer {
-			transform: translateX(0);
-		}
+	.closeBtn {
+		color: var(--primary-text-color);
+		width: 2.5rem;
+		height: 2.5rem;
+		padding: 0;
+		margin-left: auto;
 	}
 }
 
@@ -59,6 +64,7 @@
 		width: 100%;
 		margin: 0.5rem 0px 0.5rem 0px;
 		border: 2px solid var(--border-gray);
+		background-color: var(--main-background);
 	}
 
 	p {
@@ -87,6 +93,7 @@
 		margin: 0.5rem 0px 0.5rem 0px;
 		border: 2px solid var(--border-gray);
 		color: inherit;
+		background-color: var(--main-background);
 	}
 
 	option {
